# qd2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
packaging/linux/: qd2.desktop
src/: cli.rs  diagnostics.rs  main.rs  qemu.rs  viewer.rs
src/qemu/: discovery.rs  inspection.rs  mod.rs  selection.rs  types.rs  warnings.rs
src/viewer/: audio.rs  chooser.rs  chrome.rs  clipboard.rs  cursor.rs  dmabuf.rs  events.rs  framebuffer.rs  grab.rs  hotkeys.rs  keyboard.rs  listener.rs  mod.rs  mouse.rs  utils.rs
src/viewer/listener/: mod.rs  reconnect.rs  remote.rs  session.rs
