[package]
name = "qd2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
gtk4 = { version = "0.10.0", features = ["v4_14"] }
pixman-sys = "0.1.0"
qemu-display = "0.2.1"
serde_bytes = "0.11.19"
tokio = { version = "1.51.1", features = ["macros", "rt-multi-thread", "sync"] }
zbus = "5.14.0"
